# recent_work

./: links
GEM-main/gem_ws/: README.md
GEM-main/gem_ws/devel/: .catkin  _setup_util.py  local_setup.sh
GEM-main/gem_ws/devel/include/etasb_msgs/: point2D.h  point2DArray.h
GEM-main/gem_ws/devel/lib/pkgconfig/: common_resources.pc  daheng_camera.pc  depth_camera.pc  etasb_msgs.pc  gem_bringup.pc  gem_camera.pc  (+12 more)
GEM-main/gem_ws/src/common_resources/: CMakeLists.txt  package.xml  setup.py
GEM-main/gem_ws/src/etasb_msgs/: CMakeLists.txt
GEM-main/gem_ws/src/etasb_msgs/msg/: point2D.msg  point2DArray.msg
GEM-main/gem_ws/src/gem_bringup/: CMakeLists.txt  package.xml
GEM-main/gem_ws/src/gem_camera/: CMakeLists.txt
GEM-main/gem_ws/src/gem_gazebo/: CMakeLists.txt  package.xml
GEM-main/gem_ws/src/gem_moveit/: .setup_assistant  CMakeLists.txt
GEM-main/gem_ws/src/green_brown_detection/: CMakeLists.txt  readme.md
GEM-main/gem_ws/src/hc10/: readme.md
GEM-main/gem_ws/src/move2point/: CMakeLists.txt  package.xml  readme.md
GEM-main/gem_ws/src/move2point/src/move2point/: moveit_driver.py
GEM-main/gem_ws/src/visual_servo/: CMakeLists.txt
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_server.py  listener.py
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/scripts/: disparity_pub.py  obj.py  object_tracking.py  test_camera.py
catkin_ws/src/beginner_tutorials/test/: add_two_ints_server.py
(+204 files in other folders)
