<?xml version="1.0"?>
<package format="2">
  <name>move2point</name>
  <version>0.0.0</version>
  <description>The move2point package</description>
  <maintainer email="tingsheng@todo.todo">tingsheng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>